@@ -163,8 +163,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Josef Špaček 2011-2020
-     BSD 2-Clause License
+    © Michal Josef Špaček 2011-2020
+
+    BSD 2-Clause License
 
 VERSION
     0.09
