@@ -276,8 +276,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © Michal Josef Špaček 2011-2020
- BSD 2-Clause License
+© Michal Josef Špaček 2011-2020
+
+BSD 2-Clause License
 
 =head1 VERSION
 
